--- a/style.css
+++ b/style.css
@@ -58,9 +58,9 @@ nav a:hover {
   }
 
   span {
-    font-weight: bold;horas
+    font-weight: bold;
     color: var(--secondary-color);
-   }
+}
 
 
 
